--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,8 @@
 unbind r
 unbind C-b
 
-bind r source-file ~/.tmux.conf
+# Reload config with Prefix+r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 set -g renumber-windows on
 set -g prefix M-Space 
@@ -9,6 +10,9 @@ bind M-Space send-prefix
 set -g mouse on
 setw -g mode-keys vi
 
+#set-option -g allow-rename off
+#set-window-option -g automatic-rename off
+#set-option -g set-titles off
 
 unbind '"'
 unbind %
@@ -22,6 +26,18 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set -g repeat-time 1000  # 1 second to keep pressing
+
+# ~/.tmux.conf
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+set -sa terminal-features ',xterm-256color:RGB'
+
+# Force proper window sizing
+setw -g aggressive-resize on
+
+# Fix rendering issues
+set -g focus-events on
 
 bind-key j command-prompt -p "join pane from:" "join-pane -s '%%'"
 bind-key b break-pane
@@ -56,14 +72,24 @@ bind -r L resize-pane -R 5   # Resize right
 #set -g window-style 'fg=colour247,bg=colour236'
 #set -g window-active-style 'fg=colour250,bg=black'
 
-set -g window-active-style 'fg=colour247,bg=colour236'
-set -g window-style 'fg=colour250,bg=black'
-#set -g window-style 'fg=colour250,bg=default'
-#set -g window-active-style 'fg=colour255,bg=colour234'
+set -g pane-border-style 'fg=colour238'
+set -g pane-active-border-style 'fg=colour208'  # Bright border for active
+set -g window-style 'fg=colour250,bg=default'
+set -g window-active-style 'fg=colour255,bg=default'
+
 set -g pane-border-lines heavy
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @plugin 'catppuccin/tmux#v2.1.3'
+# Custom status bar that shows window names
+set -g status-style bg=colour235,fg=colour136
+set -g status-left '#[fg=colour235,bg=colour136,bold] #S '
+set -g status-right '#[fg=colour235,bg=colour136,bold] %H:%M '
+set -g status-left-length 20
+set -g status-right-length 50
+
+# Window status - THIS IS THE KEY PART
+set -g window-status-format '#[fg=colour244,bg=colour235] #I:#W '
+set -g window-status-current-format '#[fg=colour235,bg=colour136,bold] #I:#W '
 run '~/.tmux/plugins/tpm/tpm'
