--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,12 @@
 unbind r
 unbind C-b
-
+unbind C-a
 # Reload config with Prefix+r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 set -g renumber-windows on
-set -g prefix M-Space 
-bind M-Space send-prefix
+set -g prefix M-F9
+bind M-F9 send-prefix
 set -g mouse on
 setw -g mode-keys vi
 
