Added md integration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,7 @@ unbind %
 bind s split-window -v -c "#{pane_current_path}"  # horizontal split
 bind v split-window -h -c "#{pane_current_path}"  # vertical split
 
+bind-key n new-window -n 'notes' -c ~/notes 'nvim index.md'
 bind q kill-window
 bind x kill-pane
 
