--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,10 +16,14 @@ setw -g mode-keys vi
 
 unbind '"'
 unbind %
-bind s split-window -v -c "#{pane_current_path}"  # horizontal split
-bind v split-window -h -c "#{pane_current_path}"  # vertical split
+bind v split-window -v -c "#{pane_current_path}"  # horizontal split
+bind s  split-window -h -c "#{pane_current_path}"  # vertical split
 
-bind-key n new-window -n 'notes' -c ~/notes 'nvim index.md'
+
+bind-key n display-menu -T "Notes" \
+    "Personal" p "new-window -n 'notes-personal' -c ~/notes 'nvim index.md'" \
+    "Work" w "new-window -n 'notes-work' -c ~/notes-work 'nvim index.md'"
+
 bind q kill-window
 bind x kill-pane
 
@@ -45,10 +49,20 @@ bind-key b break-pane
 
 set-option -g status-position top
 # Swap current pane with pane in that direction
-bind h swap-pane -U   # Swap with pane above (up)
-bind j swap-pane -D   # Swap with pane below (down)  
-bind k swap-pane -U   # Swap with pane above (up)
-bind l swap-pane -D   # Swap with pane below (down)
+bind-key C-h swap-pane -U
+bind-key C-j swap-pane -D  
+bind-key C-k swap-pane -U
+bind-key C-l swap-pane -D
+
+bind 1 select-window -t 1
+bind 2 select-window -t 2
+bind 3 select-window -t 3
+bind 4 select-window -t 4
+bind 5 select-window -t 5
+bind 6 select-window -t 6
+bind 7 select-window -t 7
+bind 8 select-window -t 8
+bind 9 select-window -t 9
 
 # Capital letters for resizing in specific directions
 bind -r H resize-pane -L 5   # Resize left
@@ -82,6 +96,23 @@ set -g pane-border-lines heavy
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-save-command-strategy 'pane'
+
+# Resurrect restores dotnet
+set -g @resurrect-processes 'ssh ~dotnet lazygit "npm run*" docker-compose tail python node'
+
+bind Right switch-client -n  # Prefix + Right Arrow
+bind Left switch-client -p   # Prefix + Left Arrow
+
+# Auto-enable logging when any pane changes
+set-hook -g after-select-pane 'run-shell "~/.tmux/auto-log-dotnet.sh"'
+set-hook -g pane-focus-in 'run-shell "~/.tmux/auto-log-dotnet.sh"'
 
 # Custom status bar that shows window names
 set -g status-style bg=colour235,fg=colour136
@@ -94,3 +125,12 @@ set -g status-right-length 50
 set -g window-status-format '#[fg=colour244,bg=colour235] #I:#W '
 set -g window-status-current-format '#[fg=colour235,bg=colour136,bold] #I:#W '
 run '~/.tmux/plugins/tpm/tpm'
+
+set-hook -g client-session-changed 'clear-history'
+bind-key -r f display-popup -E -w 80% -h 80% "~/.local/bin/tmux-sessionizer"
+bind-key k display-popup -E -w 80% -h 80% "~/.local/bin/tmux-kill-session"
+bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
+bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
+bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
+bind-key -r M-s run-shell "tmux neww tmux-sessionizer -s 3"
+
