--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,11 +8,17 @@ set -g renumber-windows on
 set -g prefix M-F9
 bind M-F9 send-prefix
 set -g mouse on
-setw -g mode-keys vi
+set -g mode-keys vi
 
 #set-option -g allow-rename off
 #set-window-option -g automatic-rename off
 #set-option -g set-titles off
+# Claude AI - Append to current nvim file (auto-detect)
+bind-key C-c display-popup -E -w 90% -h 90% "$HOME/.local/bin/tmux-claude-append"
+
+
+# Claude AI - New conversation
+bind-key C-n run-shell "tmux display-popup -E -w 90% -h 90% 'claude-new'"
 
 unbind '"'
 unbind %
