--- a/nvim/.config/tmux-sessionizer/tmux-sessionizer.conf
+++ b/nvim/.config/tmux-sessionizer/tmux-sessionizer.conf
@@ -1,6 +1,10 @@
 # Only search specific project directories, not entire home
 TS_SEARCH_PATHS=(~/Documents/Github  ~/notes)
 
+1=backend
+1=web
+2=mobile
+3=linux
 # Or if you want to search multiple levels deep:
 # TS_SEARCH_PATHS=(~/projects:2 ~/work:2 ~/notes:1)
 
