--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -140,3 +140,12 @@ bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
 bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
 bind-key -r M-s run-shell "tmux neww tmux-sessionizer -s 3"
 
+
+bind-key ! switch-client -t backend
+bind-key @ switch-client -t web
+bind-key '#' switch-client -t mobile
+bind-key '$' switch-client -t linux
+
+bind-key C-n if-shell "tmux has-session -t claude-notes 2>/dev/null" \
+    "switch-client -t claude-notes" \
+    "new-session -s claude-notes"
